--- a/src/main/modules/ng/fichas/lista.html
+++ b/src/main/modules/ng/fichas/lista.html
@@ -1,6 +1,6 @@
 <h1>Lista de Fichas</h1>
 
-<input type="text" ng-model="nombre"/>
+<input type="text" ng-model="ficha.nombre"/>
 <button ng-click="crear()">Crear Ficha</button>
 <hr/>
 <table ng-show="fichas.length">
