--- a/src/main/index.html
+++ b/src/main/index.html
@@ -1,32 +1,51 @@
 <!doctype html>
 <!--(if target build)>
-	<html ng-app="angular" manifest="ngStart.manifest">
+	<html ng-app="angular" manifest="clavicon.manifest">
 <!(endif)-->
 <!--(if target local)> -->
 <html xmlns="http://www.w3.org/1999/html">
 <!--<!(endif)-->
 <head>
-	<title>ngStart</title>
+  <title>Clavicon</title>
 
-	<meta charset="utf-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!--(if target build)>
-		<link rel="stylesheet" href="css/ngStart.css">
-		<script src="modules/main.js" data-main="main"></script></script>
+  <!--(if target build)>
+    <link rel="stylesheet" href="css/clavicon.css">
+    <script src="modules/main.js" data-main="main"></script></script>
 
-	<!(endif)-->
-	<!--(if target local)> -->
-	<!--<script type="text/javascript">parent.uitest && parent.uitest.instrument(window);</script>-->
-	<script src="http://localhost:35729/livereload.js"></script>
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/bootstrap-responsive.css">
-	<link rel="stylesheet" href="css/project.css">
-	<script src="../../bower_components/requirejs/require.js" data-main="modules/main"></script>
-	<!--<!(endif)-->
+  <!(endif)-->
+  <!--(if target local)> -->
+  <!--<script type="text/javascript">parent.uitest && parent.uitest.instrument(window);</script>-->
+  <script src="http://localhost:35729/livereload.js"></script>
+  <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="css/clavicon.css">
+  <script src="../../bower_components/requirejs/require.js" data-main="modules/main"></script>
+  <!--<!(endif)-->
 </head>
 <body>
-<div class="container">
-	<div ng-view></div>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="NavBarController">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Activar navegación</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" ng-click="fichas()">Clavicon</a>
+    </div>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li ng-class="{active: isActive('fichas')}"><a ng-click="fichas()">Fichas</a></li>
+        <li ng-class="{active: isActive('apuntes')}"><a ng-click="apuntes()">Apuntes</a></li>
+      </ul>
+    </div>
+    <!--/.nav-collapse -->
+  </div>
+</div>
+<div class="container" ng-view>
 </div>
 </body>
 </html>
