--- a/src/main/modules/ng/fichas/crear.html
+++ b/src/main/modules/ng/fichas/crear.html
@@ -117,7 +117,7 @@
         <div class="col-sm-offset-2 col-sm-10">
           <div class="btn-group">
             <button type="submit" class="btn btn-primary" ng-click="crear()">Crear</button>
-            <button class="btn btn-danger" ng-click="cancelar()">Cancelar</button>
+            <button class="btn btn-default" ng-click="cancelar()">Cancelar</button>
           </div>
         </div>
       </div>
