Terminado refactor - development de la nueva feature de edición de fichas Hemos sacado el formulario completo a una directiva y también usamos el mismo controller para crear y guardar. Todo han sido refactors de código duplicado, lo que ha dejado el código mucho más compacto y modular

--- a/src/main/modules/ng/fichas/editar.html
+++ b/src/main/modules/ng/fichas/editar.html
@@ -1,7 +1,7 @@
 <div class="page-header">
-  <h1>Crear una nueva ficha</h1>
+  <h1 ng-bind-template="Editar la ficha {{ficha.numero}}"></h1>
 
-  <p class="lead">Rellena el formulario y pulsa el botón <strong>Crear</strong>.</p>
+  <p class="lead">Rellena el formulario y pulsa el botón <strong>Guardar</strong>.</p>
 </div>
 
 <div class="row">
