--- a/src/main/modules/ng/fichas/editar.html
+++ b/src/main/modules/ng/fichas/editar.html
@@ -8,7 +8,7 @@
   <div class="col-md-12">
     <fichas-form ficha="ficha">
       <div class="btn-group">
-        <button type="submit" class="btn btn-primary" ng-click="guardar()">Crear</button>
+        <button type="submit" class="btn btn-primary" ng-click="guardar()">Guardar</button>
         <button class="btn btn-default" ng-click="cancelar()">Cancelar</button>
       </div>
     </fichas-form>
